--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,11 +8,13 @@
     line-height: 1.5;
     border-radius: .25rem;
     transition: color .15s;
-    margin: 6px;
+    margin: 6px; 
 }
 
 .btn {
     background-color: darkred;
+    border-color: darkred;
+    color: white;
 }
 
 .container-2 {
